# ds-utilities

./: Pipfile  PyPI.md  README.md  pyproject.toml
.github/workflows/: deploy.yml  deploy_test.yml  docs.yml  security.yml  styling.yml  test.yml
docs/source/: conf.py  index.rst
tests/: test_main.py
