[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-utilities"
dynamic = ["version"]
description = "A python package for ..."
dependencies = []
requires-python = ">=3.8"
license = { file = "LICENCE" }
keywords = ["grasp-labs", "python"]
authors = [
    {name = "", email = ""}
]
maintainers = [
    {name = "", email = ""}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
readme = "PyPI.md"

[project.urls]
Homepage = "https://graspdp.com/"
Documentation = "https://grasp-labs.github.io/<package-name>/"
Repository = "https://github.com/grasp-labs/<package-name>/"
Issues = "https://github.com/grasp-labs/<package-name>/issues/"
Changelog = "https://github.com/grasp-labs/<package-name>/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {file = "VERSION.txt"}
